src/k8s/apps/sgf.dev/production/media-path-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sgf-dev-media-path
spec:
  replacePathRegex:
    regex: ^/(.*)
    replacement: /media/$1
