src/k8s/apps/sgf.dev/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sgf-dev-production
  labels:
    app.kubernetes.io/name: sgf-dev
    app.kubernetes.io/instance: production
