src/k8s/apps/sgf.dev/production/apex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sgf-dev-apex
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: sgf-dev-production-sgf-dev-www-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sgf.dev
      secretName: sgf-dev-tls
  rules:
    - host: sgf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sgf-dev
                port:
                  number: 80
